<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    android:background="@android:color/white">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="5"
        android:columnCount="2">

        <EditText
            android:id="@+id/EditFirstName"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:hint="@string/FirstName"/>
        <EditText
            android:id="@+id/EditLastName"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:hint="@string/LastName"/>
        <EditText
            android:id="@+id/EditBirthDate"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:inputType="date"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:hint="@string/BirthDate"/>
        <Button
            android:id="@+id/UpdatePersonButton"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:layout_gravity="center|top"
            android:layout_width="wrap_content"
            android:text="@string/Update"/>
        <Button
            android:id="@+id/DeletePersonButton"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:layout_gravity="center|top"
            android:layout_width="wrap_content"
            android:text="@string/Delete"/>
        <Button
            android:id="@+id/Cancel"
            android:layout_columnSpan="2"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:text="@string/Cancel"/>
    </GridLayout>
</LinearLayout>