<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="justynafirkowska.datacollector.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:rowCount="6">
        <EditText
            android:id="@+id/Name"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:hint="@string/FirstName"/>
        <EditText
            android:id="@+id/LastName"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:hint="@string/LastName"/>
        <EditText
            android:id="@+id/BirthDate"
            android:layout_column="1"
            android:layout_row="3"
            android:inputType="date"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:hint="@string/BirthDate"/>
        <Button
            android:id="@+id/AddPerson"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:text="@string/Add"/>
        <ListView
            android:id="@+id/Persons"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"/>
</GridLayout>
